syntax = "proto3";

package com.cognite.beam.proto;

option java_package = "com.cognite.client.dto";
option java_multiple_files = true;

message Event {
    optional int64 id = 1;
    optional string external_id = 2;
    optional int64 start_time = 3;
    optional int64 end_time = 4;
    optional string description = 5;
    optional string type = 6;
    optional string subtype = 7;
    repeated int64 asset_ids = 8;
    optional int64 created_time = 9;
    optional int64 last_updated_time = 10;
    map<string, string> metadata = 11;

    optional string source = 13;
    optional int64 data_set_id = 14;
}
